MORE rewards tweaks!  Spacing issues.

--- a/app/assets/stylesheets/app/rewards.css.scss
+++ b/app/assets/stylesheets/app/rewards.css.scss
@@ -3,7 +3,7 @@
 
 .rewards {
   overflow: auto;
-  padding-top:20px;
+  padding-top:40px;
 
   h1 {
     font-size: 2em;
@@ -64,7 +64,7 @@
 
   .message {
     display:inline-block;
-    margin:0px 30px 30px 0px;
+    margin:0px 30px 10px 0px;
     width:480px;
   }
 
